--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,26 @@ img {
   width: 100px;
   height: 100px;
 }
+
+.controls {
+  display: flex;
+  gap: 18px;
+}
+
+.controls .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #ffb900;
+  border: solid 1px #ffb900;
+  background: #fff;
+}
+
+.controls .icon:hover {
+  color: #fff;
+  border: solid 1px #fff;
+  background: #ffb900;
+}
